--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:smVvQ5e3zClCqxGdZItKtHc/4klWLesOBW+aCQ7QYrw=
+APP_KEY=base64:5uH7JnyuVtbxa5M/hwA1VRg/gB9C1bDQAO0aj4mDs60=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -10,8 +10,8 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=sdgd
+DB_PORT=33065
+DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
